# Web-SQLAlchemy

./: README.md  alembic.ini  config.ini  my_select.py  pyproject.toml
University_Postgres_SQLAlchemy/: alembic.ini
University_Postgres_SQLAlchemy/database/: db_connection.py  models.py  my_select.py  seed.py
University_Postgres_SQLAlchemy/migration/versions/: 8d90e9361368_init_v.py
alembic/: env.py
alembic/versions/: 8ef220d51ed3_init.py
database/: db.py  models.py  seed.py
migration/versions/: 192386293fba_init_migration.py  d281df6be5a4_init_migration_2.py  e0db7b7ff092_init2.py  f0c2dc6f2d70_init3.py  f30664384edf_init.py
