[tool.poetry]
name = "web-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Kostiantyn-Liapkalo <lynx87@ukr.net>"]
readme = "README.md"
packages = [{include = "web_sqlalchemy"}]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^2.0.13"
psycopg2 = "^2.9.6"
alembic = "^1.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
